@@ -4,7 +4,7 @@
  *
  * This file contains code for the CService AKICK functions.
  *
- * $Id: akick.c 8059 2007-04-02 14:28:15Z nenolod $
+ * $Id: akick.c 8065 2007-04-02 14:41:59Z nenolod $
  */
 
 #include "atheme.h"
@@ -14,7 +14,7 @@ static void cs_cmd_akick(sourceinfo_t *si, int parc, char *parv[]);
 DECLARE_MODULE_V1
 (
 	"chanserv/akick", FALSE, _modinit, _moddeinit,
-	"$Id: akick.c 8059 2007-04-02 14:28:15Z nenolod $",
+	"$Id: akick.c 8065 2007-04-02 14:41:59Z nenolod $",
 	"Atheme Development Group <http://www.atheme.org>"
 );
 
@@ -241,11 +241,11 @@ void cs_cmd_akick(sourceinfo_t *si, int parc, char *parv[])
 			if (ca->level == CA_AKICK)
 			{
 				if (ca->myuser == NULL)
-					command_success_nodata(si, _("%d: \2%s\2 [modified: %s]"), ++i, ca->host, time_ago(ca->ts));
+					command_success_nodata(si, _("%d: \2%s\2 [modified: %s ago]"), ++i, ca->host, time_ago(ca->ts));
 				else if (LIST_LENGTH(&ca->myuser->logins) > 0)
-					command_success_nodata(si, _("%d: \2%s\2 (logged in) [modified: %s]"), ++i, ca->myuser->name, time_ago(ca->ts));
+					command_success_nodata(si, _("%d: \2%s\2 (logged in) [modified: %s ago]"), ++i, ca->myuser->name, time_ago(ca->ts));
 				else
-					command_success_nodata(si, _("%d: \2%s\2 (not logged in) [modified: %s]"), ++i, ca->myuser->name, time_ago(ca->ts));
+					command_success_nodata(si, _("%d: \2%s\2 (not logged in) [modified: %s ago]"), ++i, ca->myuser->name, time_ago(ca->ts));
 			}
 
 		}
