@@ -1,3 +1,12 @@
+nenolod     2007/04/02 14:39:56 UTC	(20070402-8063)
+  Log:
+  - remove duplicate newlines
+  
+
+  Changes:	Modified:
+  +2 -2		trunk/src/logger.c (File Modified) 
+
+
 nenolod     2007/04/02 14:38:31 UTC	(20070402-8061)
   Log:
   - fix a logging issue where the inverse targets are being logged
